# CollisionDetector

./: CMakeLists.txt  README.md  Readme.md  main.c  main.cpp
UDP/: client.c  server.c
ds/: md5  md5.c  merkle  merkle.c
include/: base.h  bruteforce.h  cellSpatial.h  kdtree.h  looseocttree.h  objectSpatial.h  octtree.h  points.h  sphere.h  structureSpatial.h  twoDimension.h  vector.h
shell/: splittingFiles.sh
src/: bruteforce.cpp  kdtree.cpp  looseocttree.cpp  octtree.cpp  points.cpp  sphere.cpp  vector.cpp
temp/: segmentad  segmentae  segmentaf  segmentag  segmentah  segmentai  segmentaj  segmentak  segmental
